# ISSEM-2022

./: README.md  pyproject.toml
InfantIncubatorSimulator/: Lab7_group21.md  Readme.md  SampleClient.py  SampleNetworkClient.py  SampleNetworkServer.py  infinc.py  lab9_group21.ipynb  proxy.py
InfantIncubatorSimulator/.ipynb_checkpoints/: lab9_group21-checkpoint.ipynb
InfantIncubatorSimulator/patch/: SampleNetworkClient.py  SampleNetworkServer.py
InfantIncubatorSimulator/testcases/: proxy.py
Lab_3/: lab3_group_21.ipynb
